Added visualizer of data

--- a/compareAutomaticManual.ipynb
+++ b/compareAutomaticManual.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas\n",
-    "import re"
+    "import pandas, re, datetime"
    ]
   },
   {
@@ -35,6 +34,7 @@
     "\n",
     "def standardiseVenezuelan(s):\n",
     "    s = str(s)\n",
+    "    s = s.strip()\n",
     "    s = s.lower().replace('ven', 'v')\n",
     "    s = s.replace('v', 'VEN')\n",
     "    return s\n",
@@ -55,24 +55,24 @@
    "outputs": [],
    "source": [
     "nivelN1 = pandas.read_csv('Data/nivelN1_manual.csv')\n",
-    "nivelN1['VAR_0019'] = nivelN1['VAR_0019'].map(standardiseVenezuelan)\n",
-    "addID01(nivelN1)\n",
+    "nivelN8 = pandas.read_csv('Data/nivelN8_manual.csv')\n",
+    "nivelN8.index = nivelN8.ID01\n",
     "nivelN1.index = nivelN1.ID01\n",
     "nivelN1 = nivelN1.loc[~nivelN1.index.duplicated(keep='first')]\n",
+    "nivelN8 = nivelN8.loc[~nivelN8.index.duplicated(keep='first')]\n",
+    "\n",
+    "nivelN1 = nivelN1.join(nivelN8, rsuffix = 'r')\n",
+    "\n",
+    "nivelN1['VAR_0019'] = nivelN1['VAR_0019'].map(standardiseVenezuelan)\n",
+    "addID01(nivelN1)\n",
+    "nivelN1 = nivelN1.loc[~nivelN1.index.duplicated(keep='first')]\n",
+    "nivelN1['VAR_0183'] = nivelN1.VAR_0183.map(lambda s: datetime.datetime.strptime(s , '%m/%d/%y %H:%M:%S') if s == s else datetime.datetime(1,1,1))\n",
     "\n",
     "automatic = pandas.read_csv('Data/results1.csv')\n",
     "automatic['VAR_0019'] = automatic['VAR_0019'].map(standardiseVenezuelan)\n",
     "addID01(automatic)\n",
-    "automatic.index = automatic.ID01"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(set(nivelN1.columns))"
+    "automatic.index = automatic.ID01\n",
+    "automatic['VAR_0183'] = automatic.VAR_0183.map(lambda s: datetime.datetime.strptime(s , '%Y-%m-%d %H:%M:%S'))"
    ]
   },
   {
@@ -115,10 +115,7 @@
    "outputs": [],
    "source": [
     "import datetime\n",
-    "import caseTransformer\n",
-    "nivelN1['dayOperation'] = nivelN1.VAR_0183.map(lambda s: datetime.datetime.strptime(s, '%m/%d/%y %H:%M:%S') if s== s else s)\n",
-    "automatic['dayOperation'] = automatic.VAR_0183.map(lambda s: datetime.datetime.strptime(s.split()[0], '%Y-%m-%d') if s == s else s)\n",
-    "automaticByDay = automatic.groupby('dayOperation')"
+    "import caseTransformer\n"
    ]
   },
   {
@@ -131,15 +128,15 @@
     "errors = []\n",
     "automatic2manual = {}\n",
     "for k, i in nivelN1.iterrows():\n",
-    "    if not isinstance(i.VAR_0183, str) or '/19 ' not in i.VAR_0183 :\n",
+    "    if '2019' not in str(i.VAR_0183):\n",
     "        continue\n",
-    "        \n",
+    "    \n",
     "    if i.ID01 not in automatic.index:\n",
     "        c += 1\n",
-    "        errors.append((i.ID01, i.VAR_0019, i.dayOperation))\n",
+    "        errors.append((k, i.VAR_0019, i.VAR_0183))\n",
     "        j = i\n",
     "    else:\n",
-    "        automatic2manual[i.ID01] = i.ID01\n",
+    "        automatic2manual[i.ID01] = k\n",
     "print (len(errors), len(automatic2manual))"
    ]
   },
@@ -149,16 +146,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "with open('Data/notFoundInAutomatic.pkl' , 'wb') as file:\n",
-    "    pickle.dump(errors, file)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Check differences"
+    "import difflib\n",
+    "def similarTexts(s1, s2, th = .8):\n",
+    "    #s1 = s1.replace('VEN', '').strip()\n",
+    "    #s2 = s2.replace('VEN', '').strip()\n",
+    "\n",
+    "    d =difflib.SequenceMatcher(a = s1, b = s2)\n",
+    "    r = sum((i.size for i in d.get_matching_blocks())) / min(len(s1), len(s2))\n",
+    "    return r > th\n",
+    "\n",
+    "def nearOperation(pId, dayOperation, automatic, pIDOut):\n",
+    "    registriesNear = automatic.loc[((dayOperation - datetime.timedelta(days = 5)) < automatic.VAR_0183) & \n",
+    "            ((dayOperation + datetime.timedelta(days = 5)) > automatic.VAR_0183)]\n",
+    "    similar = registriesNear.VAR_0019.map(lambda s:  similarTexts(s, pId))\n",
+    "    if sum(similar) == 1:\n",
+    "        pIDOut['res'] = registriesNear[similar].ID01.iloc[0]\n",
+    "        return True\n",
+    "\n",
+    "    else:\n",
+    "        #print('Error')\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "# Check whether there exists a case with \n",
+    "cF, cT = 0, 0 \n",
+    "for i,(iD01, pId, dayOperation) in enumerate(errors):\n",
+    "    pIDOut = {}\n",
+    "    if pId in automatic.VAR_0019.values:\n",
+    "        cT += 1\n",
+    "        id01Automatic = automatic.loc[automatic.VAR_0019 == pId, 'ID01'].iloc[0]\n",
+    "        automatic2manual[id01Automatic] = iD01\n",
+    "    elif 'VEN' + pId in automatic.VAR_0019.values:\n",
+    "        cT += 1\n",
+    "        id01Automatic = automatic.loc[automatic.VAR_0019 == 'VEN' + pId, 'ID01'].iloc[0]\n",
+    "        automatic2manual[id01Automatic] = iD01\n",
+    "\n",
+    "    elif nearOperation(pId, dayOperation, automatic, pIDOut):\n",
+    "        automatic2manual[pIDOut['res']] = iD01\n",
+    "       \n",
+    "    #elif dayOperation <= datetime.datetime(2019, 1, 20):\n",
+    "    #    pass\n",
+    "    else:\n",
+    "        print(pId)\n",
+    "        cF += 1\n",
+    "    \n",
+    "print(cF, cT)"
    ]
   },
   {
@@ -167,25 +199,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "manual = nivelN1.loc[automatic2manual]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "automatic.loc[manual.loc[manual['VAR_0371'] == 'B'].ID01]['VAR_0282'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "manual.loc[manual['VAR_0371'] == 'B','VAR_0282'].values"
+    "manualFiltered= nivelN1.loc[list(automatic2manual.values())]\n",
+    "automaticFiltered = automatic.loc[list(automatic2manual.keys())]"
    ]
   },
   {
@@ -203,7 +218,7 @@
     "    return ('%d-%02d-%02d' % (d.year,d.month, d.day))\n",
     "\n",
     "for d in caseTransformer.dateVars:\n",
-    "    nivelN1[d] = nivelN1[d].map(parseDateManual)"
+    "    manualFiltered[d] = manualFiltered[d].map(parseDateManual)"
    ]
   },
   {
@@ -227,8 +242,8 @@
     "            option = r['Unnamed: 4']\n",
     "            value = r['Unnamed: 5']\n",
     "            df.loc[df[colname] == option, colname] = value\n",
-    "renameDatabaseSIP(nivelN1)\n",
-    "renameDatabaseSIP(automatic)"
+    "renameDatabaseSIP(manualFiltered)\n",
+    "renameDatabaseSIP(automaticFiltered)"
    ]
   },
   {
@@ -237,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consistent"
+    "manualFiltered.columns"
    ]
   },
   {
@@ -246,8 +261,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "commonCols = set(nivelN1.columns).intersection(automatic.columns)\n",
-    "print('Common columns:', len(commonCols), len(nivelN1.columns))"
+    "commonCols = set(manualFiltered.columns).intersection(automaticFiltered.columns)\n",
+    "print('Common columns:', len(commonCols), len(manualIFiltered.columns))"
    ]
   },
   {
@@ -256,9 +271,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, k in enumerate(automatic2manual):\n",
-    "    break\n",
-    "automatic.loc[k, 'VAR_0019=']"
+    "import collections\n",
+    "errorCount = collections.defaultdict(lambda : 0)"
    ]
   },
   {
@@ -267,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "automatic.loc[automatic.vdrl_min_prenatalControl_24==automatic.vdrl_min_prenatalControl_24]"
+    "pacientes['Identificacion'].values"
    ]
   },
   {
@@ -276,22 +290,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, k in enumerate(automatic2manual):\n",
-    "    print()\n",
-    "    print('Differences :', k)\n",
+    "'V27180231' in pacientes['Identificacion'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, (kAuto, kManual) in enumerate(automatic2manual.items()):\n",
+    "    print('Differences :', kAuto, kManual)\n",
     "    for c in commonCols:\n",
-    "        if automatic.loc[k, c] != nivelN1.loc[k, c]:\n",
-    "            print('VAR %s : auto= %s  , manual= %s' % (c, automatic.loc[k, c], nivelN1.loc[k, c]))\n",
-    "    print('====\\n\\n')\n",
-    "    for c in filter(lambda c: c not in commonCols, nivelN1.columns):\n",
-    "        print('VAR %s : manual= %s' % (c,  nivelN1.loc[k, c]))\n",
-    "        \n",
-    "    print('====\\n\\n')\n",
-    "    for c in filter(lambda c: c not in commonCols and c.startswith('VAR'), automatic.columns):\n",
-    "        print('VAR %s : manual= %s' % (c,  automatic.loc[k, c]))\n",
-    "\n",
-    "    if i == 3:\n",
-    "        break"
+    "        if automaticFiltered.loc[kAuto, c] != manualFiltered.loc[kManual, c]:\n",
+    "            print('VAR %s : auto= %s  , manual= %s' % (c, automaticFiltered.loc[kAuto, c], manualFiltered.loc[kManual, c]))\n",
+    "            errorCount[c] +=1\n",
+    "    #print('====\\n\\n')\n",
+    "    #for c in filter(lambda c: c not in commonCols, manualFiltered.columns):\n",
+    "    #    print('VAR %s : manual= %s' % (c,  manualFiltered.loc[kManual, c]))\n",
+    "    #    \n",
+    "    #print('====\\n\\n')\n",
+    "    #for c in filter(lambda c: c not in commonCols and c.startswith('VAR'), automaticFiltered.columns):\n",
+    "    #    print('VAR %s : manual= %s' % (c,  automaticFiltered.loc[kAuto, c]))\n"
    ]
   },
   {
