--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -53,7 +53,9 @@
     "registrosByCaso = registros.groupby('Caso')\n",
     "\n",
     "entriesInfirmery = pandas.read_csv(pathFolder + '/enfermeriaMedidas.csv', index_col = 0)\n",
-    "entriesInfirmeryByCase = entriesInfirmery.groupby('IdAdmision')"
+    "entriesInfirmeryByCase = entriesInfirmery.groupby('IdAdmision')\n",
+    "registrosByCaso = registros.groupby('Caso')\n",
+    "registrosByPatient = registros.groupby('NumeroHistoria')\n"
    ]
   },
   {
@@ -62,7 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from parsingData.procedures import classificationProcedures"
+    "from parsingData.procedures import classificationProcedures\n",
+    "registrosByCaso = registros.groupby('Caso')\n",
+    "registrosByPatient = registros.groupby('NumeroHistoria')\n"
    ]
   },
   {
@@ -128,7 +132,7 @@
     "checkSeveralProcedures = []\n",
     "unknownProc = []\n",
     "procsNotFound = []\n",
-    "for i,r  in  tqdm.tqdm_notebook(registros.loc[registros.CodigoRegistro == 145].iterrows(), total = len(registros)):\n",
+    "for i,r  in  tqdm.tqdm_notebook(registros.loc[registros.CodigoRegistro == 145].iterrows(), total = sum(registros.CodigoRegistro == 145)):\n",
     "    if r.Caso not in casos.index:\n",
     "        continue\n",
     "        \n",
@@ -176,6 +180,158 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "e = ET.fromstring(procedimientos.loc[procedimientos.ActoQuirurgico == 'CP69727'].XmlDescripcion.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parsingDatabaseUtils.prettyPrintXML(registroFiltered.loc['1177559'].RegistroXML)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parseXML(e):\n",
+    "    print(e)\n",
+    "    leaf = True\n",
+    "    for eChild in e.iter():\n",
+    "        leaf = False\n",
+    "        print(eChild, eChild.attrib)\n",
+    "        #parseXML(eChild)\n",
+    "    if leaf:\n",
+    "        print('Is leaf', e, e.tag, e.text, e.attrib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for eChild in e.iter():\n",
+    "     print(eChild, eChild.attrib, eChild.tag, eChild.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parseXML(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "for c in caseToProcedureBirths:\n",
+    "    regs = registrosByCaso.get_group(c)\n",
+    "    if 7 not in regs.CodigoRegistro.values:\n",
+    "        motherId= regs.NumeroHistoria.iloc[0]\n",
+    "        for i, r in registrosByPatient.get_group(motherId).iterrows():\n",
+    "            inRange = lambda d1, d2: (datetime.datetime.strptime(d1, '%Y-%m-%d %H:%M:%S.%f') - datetime.datetime.strptime(d2, '%Y-%m-%d %H:%M:%S.%f')) < datetime.timedelta(days = 7)\n",
+    "            if r.CodigoRegistro == 20:\n",
+    "                if r.FechaAsignacionRegistro < regs.iloc[0].FechaAsignacionRegistro and inRange(regs.iloc[0].FechaAsignacionRegistro, r.FechaAsignacionRegistro):\n",
+    "                    registros.loc[i, 'Caso'] = c\n",
+    "                    print (c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "registroFiltered = registros.loc[registros.Caso.map(lambda s: s in caseToProcedureBirths)]\n",
+    "registroFiltered.to_csv('Casos2019Filtered/registros.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pacientes.loc['151585']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids = registroFiltered.NumeroHistoria.drop_duplicates().map(str)\n",
+    "idsOK = ids.loc[ids.map(lambda s: s in pacientes.index)]\n",
+    "pacientes.loc[idsOK]\n",
+    "idsNotOK = ids.loc[ids.map(lambda s: s not in pacientes.index)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Data:\n",
+    "    def __init__(self, path = '../Casos2019'):\n",
+    "        self.pacientes = pandas.read_csv(os.path.join(path, 'pacientes.csv'), index_col = 0)\n",
+    "        self.pacientes.index = self.pacientes.index.map(str)\n",
+    "        self.registros = pandas.read_csv(os.path.join(path, 'registrosFiltered.csv'), index_col = 0, nrows = 500)\n",
+    "        self.casos = pandas.read_csv(os.path.join(path, 'casos.csv'), index_col = 0)\n",
+    "        self.procedimientos = pandas.read_csv(os.path.join(path, 'procedimientos.csv'), index_col = 0, nrows = 500)\n",
+    "        \n",
+    "        #Filter patients and cases\n",
+    "        ids = self.registros.NumeroHistoria.drop_duplicates().map(str)\n",
+    "        idsOK = ids.loc[ids.map(lambda s: s in self.pacientes.index)]\n",
+    "        self.pacientes = self.pacientes.loc[idsOK]\n",
+    "\n",
+    "        ids = self.registros.Caso.drop_duplicates().map(str)\n",
+    "        idsOK = ids.loc[ids.map(lambda s: s in self.casos.index)]\n",
+    "        self.casos = self.casos.loc[idsOK]\n",
+    "        \n",
+    "        self.casosByPatient = self.casos.groupby('Paciente')\n",
+    "        self.registrosByCase = self.registros.groupby('Caso')\n",
+    "\n",
+    "d = Data('Casos2019')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {' a' : 1}\n",
+    "next(iter(a.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pacientes.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import datetime\n",
     "birthCases = casos.loc[caseToProcedureBirths.keys()]\n",
     "birthCases['dayOperation'] = birthCases.FechaHora.map(lambda s: datetime.datetime.strptime(s.split()[0], '%Y-%m-%d') if s == s else s)\n",
@@ -200,6 +356,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def similarTexts(s1, s2, th = .80):\n",
+    "    d =difflib.SequenceMatcher(a = s1, b = s2)\n",
+    "    r = sum((i.size for i in d.get_matching_blocks())) / min(len(s1), len(s2))\n",
+    "    return r > th\n",
+    "\n",
     "cF = 0\n",
     "cNF  = 0\n",
     "incorrectId = []\n",
@@ -217,7 +378,18 @@
     "    else:\n",
     "        print(i)\n",
     "        cNF += 1\n",
-    "print(cF, cNF)"
+    "print(cF, cNF)\n",
+    "cor = 0\n",
+    "incor = 0\n",
+    "for i, date in incorrectId:\n",
+    "    for p in pacientes.loc[map(lambda i: str(int(i)),birthCasesByDay.get_group(date).Paciente)].Identificacion:\n",
+    "        if similarTexts(i, p, th= .75):\n",
+    "            cor += 1\n",
+    "            print(i, p)\n",
+    "            break\n",
+    "    else:\n",
+    "        incor += 1\n",
+    "print(cor, incor)"
    ]
   },
   {
@@ -245,6 +417,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "registros[registros.CodigoRegistro == 145]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bs4\n",
+    "text = '<P>PACIENTE DE 19 AÑOS DE EDAD CON DIAGNOSTICOS DE :&nbsp;<BR><BR>-EMBARAZO PROLONGADO DE 41.1 POR ECOGRAFIA DEL II TRIMESTRE&nbsp;<BR>-FETO UNICO VIVO&nbsp;<BR>-TRABAJO DE PARTO EN FASE ACTIVA<BR>-HIPODINAMIA&nbsp;<BR><BR>SUBJETIVO: PACIENTE REFIERE DOLOR TIPO CONTRACCION DE MODERADA INTENSIDAD, NIEGA NAUSEAS, NIEGA VOMITOS, NIEGA CEFALEA U OTRA SINTOMATOLOGIA ASOCIADA</P> <P>OBJETIVO: <BR>SIGNOS VITALES <BR>PA: 100/70&nbsp; FC:70 FR:&nbsp;17 T:36.5 FCF: 140&nbsp;<BR><BR>PACIENTE CONSCIENTE, ALERTA, ORIENTADA. NORMOCEFALO, ESCLERAS ANICTERICAS, PUPILAS ISOCORICAS, NORMORREACTIVAS A LA LUZ, MUCOSAS HIDRATADAS, CUELLO SIMETRICO, MOVIL, SIN ADENOPATIAS PALPABLES. TORAX SIMETRICO, EXPANSIBLE,RUIDOS CARDIACOS RITMICOS, SIN SOPLOS, MURMULLO VESICULAR PRESENTE, SIN SOBREAGREGADOS. GLOBOSO POR UTERO GRAVIDO, SIN LESIONES, CON AU: 35 CM,DINAMICA UTERINA IRREGULAR 2*40*10, TONO UTERINO NORMAL. SE PALPA FETO UNICO, LONGITUDINAL, EFALICO, DORSO IZQUIERDO FCF:140 LPM; MOVIMIENTOS FETALES PRESENTES.GENITALES EXTERNOS NORMOCONFIGURADOS,&nbsp;AL TACTO VAGINAL CUELLO POSTERIOR,&nbsp;DILATACION:4CM BORRAMIENTO:80% ESTACION 0.&nbsp;EXTREMIDADES SIMETRICAS, EUTROFICAS, SIN EDEMAS, PULSOS PERIFERICOS PRESENTES, LLENADO CAPILAR &lt; 2 SEGUNDOS, SNC SIN DEFICIT SENSITIVO O MOTOR. GLASGOW 15/15.<BR>&nbsp;<BR>PARACLINICOS 16-01-19&nbsp;<BR>-FTA NEGATIVO&nbsp;<BR>-VIH 1&nbsp;Y 2 NEGATIVO<BR><BR>-ECOGRAFIA OBSTETRICA TRANSABDOMINAL: UTERO CON GESTACION UNICA - ACTIVIDAD CARDIACA PRESENTE - MOVIMIENTOS FETALES PRESENTES - PRESENTACION CEFALICO - PLACENTA FUNDICA ANTERIOR GRADO II - LIQUIDO AMNIOTICO NORMAL&nbsp;- PESO 3.100GR - EMBARAZO DE 37.1 SEMANAS.<BR><BR>ANALISIS&nbsp;<BR>PACIENTE DE 19 AÑOS DE EDAD PRIMIGESTANTE EN BUENAS CONDICIONES GENERALES, HEMODINAMICAMENTE ESTABLE, AFEBRIL, SIN SIGNOS DE SRIS, TOLERANDO VIA ORAL Y OXIGENO AMBIENTE, CON PARACLINICOS NEGATIVOS PARA SIFILIS Y VIH, MONITOREO FETAL CATEGORIA I&nbsp; EL CUAL REPORTA BIENESTAR FETAL SATISFACTORIO AL EXAMEN FISICO SE ENCUENTRA CON&nbsp;PERCEPCION DE MOVIMIENTOS FETALES POSITIVOS,CON CAMBIOS CERVICALES SIGNIFICATIVOS CON RESPECTO AL INGRESO PERO DINAMICA UTERINA IRREGULAR CON HIPODINAMIA 2*40*10&nbsp;POR LO QUE SE DECIDE INICIAR&nbsp;CONDUCCION DEL PARTO CON OXITOCINA.&nbsp;SE DEJA HOSPITALIZADA, SE EXPLICA A PACIENTE CONDUCTA A SEGUIR, SE FIRMAN CONSENTIMIENTOS,&nbsp;REFIERE ENTENDER Y ACEPTAR.&nbsp;<BR><BR> <BR>PLAN<BR>HOSPITALIZAR<BR>DIETA NORMAL<BR>OXITOCINA 5 U EN 500 CC DE SSN Y PASAR A RAZON DE 12 CC/HORA, REVALORAR CADA 30 MINUTOS<BR>S/S MONITORIA FETAL AL REGULAR ACTIVIDAD<BR>VIGILAR DINAMICA UTERINA , TONO UTERINA Y FCF<BR>CSV-AC<BR></P>'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html_parsed = bs4.BeautifulSoup(text)\n",
+    "html_parsed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = ET.fromstring(registroFiltered.iloc[0].RegistroXML)\n",
+    "parsingDatabaseUtils.prettyPrintXML(registroFiltered.iloc[0].RegistroXML)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for c, r1, r2 in checkSeveralProcedures:\n",
     "    if areSameIntervention(r1, r2):\n",
     "        print (c, 'same')\n",
@@ -261,8 +472,6 @@
     "import birthDatasetStructure\n",
     "importlib.reload(birthDatasetStructure)\n",
     "# Split in newborn\n",
-    "registrosByCaso = registros.groupby('Caso')\n",
-    "registrosByPatient = registros.groupby('NumeroHistoria')\n",
     "\n",
     "twins = {}\n",
     "processedDatasets = {}\n",
@@ -301,6 +510,7 @@
     "        if r.CodigoRegistro == 20:\n",
     "            if r.FechaAsignacionRegistro < data.epicrisis.FechaAsignacionRegistro and inRange(data.epicrisis.FechaAsignacionRegistro, r.FechaAsignacionRegistro):\n",
     "                data.registersMother.append(r)\n",
+    "                r.\n",
     "    #Discard twins:\n",
     "    #if len(data.registrosRecienNacido) > 1:\n",
     "    #    twins[c] = data\n",
@@ -404,54 +614,7 @@
     "    #if c in resSIP or c != 'AD324070':\n",
     "    #    continue\n",
     "    cT = caseTransformer.CaseTransformer(data = d)    \n",
-    "    resSIP[c],  echoLines[c]= cT.processAll()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "errors = []\n",
-    "errorsAvoidable = []\n",
-    "for c in processedDatasets:\n",
-    "    if echoLines[c] or  resSIP[c].get('VAR_0057','') not in ['07/06/1954', '']:\n",
-    "        continue\n",
-    "    if 'incorrect_echo' in resSIP[c]:\n",
-    "        errorsAvoidable.append(c)\n",
-    "    errors.append(c)\n",
-    "print(len(errors), len(errorsAvoidable))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "egsByEcho = {}\n",
-    "for c in processedDatasets:\n",
-    "    dBirth = parsingDatabaseUtils.parseDate(resSIP[c].get('VAR_0284'),'datetime')\n",
-    "    EGDays = 0\n",
-    "    if resSIP[c].get('VAR_0057','') not in ['07/06/1954', '']:\n",
-    "        dateFUM = parsingDatabaseUtils.parseDate(resSIP[c].get('VAR_0057'), 'datetime')\n",
-    "        EGDays = (dBirth - dateFUM).days\n",
-    "    elif echoLines[c]:\n",
-    "        egs = []\n",
-    "        for d, eg in echoLines[c].items():\n",
-    "            try:\n",
-    "                d = parsingDatabaseUtils.parseDate(d, 'datetime')\n",
-    "                EG = (dBirth - d).days + float(eg) *7 \n",
-    "                egs.append(EG)\n",
-    "            except:\n",
-    "                pass\n",
-    "        egsByEcho[c] = egs\n",
-    "        EGDays = np.median(egs)        \n",
-    "        \n",
-    "    if EGDays:     \n",
-    "        resSIP[c]['VAR_0198'] = EGDays//7\n",
-    "        resSIP[c]['VAR_0199'] = EGDays%7\n"
+    "    resSIP[c]= cT.processAll()\n"
    ]
   },
   {
@@ -569,7 +732,39 @@
     "    varsDone[renameDict.get(p,p)] = np.mean(resDF2[p] == resDF2[p])\n",
     "    print(renameDict.get(p,p), np.mean(resDF2[p] == resDF2[p]))\n",
     "df =pandas.DataFrame.from_dict(varsDone, orient = 'index', columns = ['Fraccion presente en tabla'])\n",
-    "df.to_excel('estadisticasRecuperacion.xlsx')\n"
+    "df.to_excel('estadisticasRecuperacion.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filterPrenatalControl(s):\n",
+    "    if 'prenatalControl' not in s and 'postnatalControl' not in s:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return int(s.split('_')[-1]) < 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filteredCols = list(filter(filterPrenatalControl, resDF))\n",
+    "resDF[filteredCols].to_excel('./Data/database_CMRC_2019_automatic.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resDF[filteredCols].to_excel('./Data/database_CMRC_2019_automatic.xlsx')"
    ]
   },
   {
